# e-commerce

./: LICENSE  README.md  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
e_commerce/api/: urls.py
e_commerce/product/: admin.py  models.py  serializers.py  views.py
e_commerce_pro/: asgi.py  settings.py  urls.py  wsgi.py
src/base/: settings.py  urls.py
src/e_commerce/: apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/e_commerce/migrations/: 0001_initial.py  0002_alter_bundleproduct_products_and_more.py  0002_alter_product_stock.py  0003_remove_catalog_product_id_remove_catalog_stock_id_and_more.py  0004_alter_product_description_alter_product_price_and_more.py  0005_alter_product_options_and_more.py  0006_remove_product_slug.py  0007_productstock_alter_product_stock_count.py  0008_alter_productstock_table.py  0009_alter_product_stock_count.py  0010_alter_product_stock_count.py  0011_alter_product_stock_count.py  0012_alter_product_stock_count.py  0013_rename_stock_count_product_stock.py
